--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Counter</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    
+    <!-- wrapper -->
+    <div>
+        <div>increment & decrement</div>
+        <div>
+            <button>
+                <i class="fa-solid fa-minus"></i>
+            </button>
+            <div>0</div>
+            <button>
+                <i class="fa-solid fa-plus"></i>
+            </button>
+        </div>
+    </div>
+    <script src="https://kit.fontawesome.com/5cd717eb19.js" crossorigin="anonymous"></script>
 </body>
 </html>
