--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         </div>
     </div>
     <script src="https://kit.fontawesome.com/5cd717eb19.js" crossorigin="anonymous"></script>
+    <script src="script.js" ></script>
 </body>
 </html>
